Revise README with detailed app information
Updated the README to include more detailed information about the app, its features, requirements, and instructions for building and running the application.